--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,6 +6,6 @@ RUN pip install -r requirements.txt
 COPY app app
 COPY alembic alembic
 COPY alembic.ini ./
-COPY .env .env
 
-ENTRYPOINT ["gunicorn", "app.main:app", " --workers", "4", "--worker-class", "uvicorn.workers.UvicornWorker", "--bind", "0.0.0.0:5000"]
+ENTRYPOINT ["gunicorn", "app.main:app", " --workers", "4", "--worker-class", "uvicorn.workers.UvicornWorker", "--bind", "0.0.0.0:5000" ]
+# ENTRYPOINT [ "uvicorn", "app.main:app", "--host", "localhost", "--port", "8000", "--workers", "4" ] 
