--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,5 @@
-FROM python:3.10.11-slim
+# FROM python:3.10.11-slim
+FROM python:alpine
 
 COPY requirements.txt requirements.txt
 RUN pip install -r requirements.txt
@@ -7,5 +8,5 @@ COPY app app
 COPY alembic alembic
 COPY alembic.ini ./
 
-ENTRYPOINT ["gunicorn", "app.main:app", " --workers", "4", "--worker-class", "uvicorn.workers.UvicornWorker", "--bind", "0.0.0.0:5000" ]
+ENTRYPOINT ["gunicorn", "app.main:app", " --workers", "4", "--worker-class", "uvicorn.workers.UvicornWorker", "--bind", "0.0.0.0:8000" ]
 # ENTRYPOINT [ "uvicorn", "app.main:app", "--host", "localhost", "--port", "8000", "--workers", "4" ] 
